Included the dist folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <script type="module">
-    import { add, hello } from "./build/release.js";
+    import { add, hello } from "./dist/release.js";
 
     window.addInts =  function addInts() {
         var theForm = document.forms['addForm'];
